@@ -1,4 +1,5 @@
 {{$NEXT}}
+    [API] Watcher Memory now stores 'active' state of Watcher
     [API] Watcher role now requires 'callback' parameter in instance construction,
     	  'start' method does not takes the callback as 2nd parameter any more
 
